# modern_c

./: CMakeLists.txt
lib/: fxns.c
src/: main.c
test/: CMakeLists.txt
